--- a/app/src/main/res/layout/details_cards.xml
+++ b/app/src/main/res/layout/details_cards.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/windowBackgroundColor">
+    android:background="@color/primaryColor">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -37,8 +37,9 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-                app:layout_collapseMode="pin" />
+                android:theme="@style/Theme.AppCompat.NoActionBar"
+                app:layout_collapseMode="pin"
+                />
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
@@ -52,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@color/windowBackgroundColor">
+            android:background="@color/primaryColor">
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
