--- a/app/src/main/res/layout/details_cards.xml
+++ b/app/src/main/res/layout/details_cards.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:theme="@style/Theme.AppCompat.NoActionBar"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
                 app:layout_collapseMode="pin"
                 />
 
